# ship-of-tools

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Project.toml  README.md  cliff.toml  requirements.md
.claude/commands/: bus-note.md  bus-sync.md
.claude/skills/release/: SKILL.md
.claude/skills/selfie/: SKILL.md
.claude/skills/sot-fe-session-start/: SKILL.md
.claude/skills/sot-fe-shutdown/: SKILL.md
.claude/skills/sot-setup/: SKILL.md
.concept/files/: CLAUDE.md  rust.md
.github/workflows/: CI.yml  gitleaks.yml  release.yml  rust.yml
.sot/: hosts.toml.example  keybindings.toml.example  settings.toml.example  worktree.toml
comm/: PROTOCOL.md
comm/adapters/codex/: hooks.json
comm/core/scripts/: codex-watch.sh  comm-bootstrap.sh  comm-context.sh  comm-despawn.sh  comm-join.sh  comm-leave.sh  comm-lib.sh  comm-list.sh  comm-listen.sh  comm-poll.sh  comm-relay.sh  comm-send.sh  comm-spawn.sh  comm-status.sh  comm-turn-auditor.sh  comm-watch.sh  comm-worktree-clean.sh  sot-fe  (+5 more)
core/: Project.toml
core/src/: ConceptExplorerCore.jl
core/test/: runtests.jl
deploy/: sotd.service
dev/: .documenter-siteinfo.json  index.html  objects.inv  screenshots-brief.md  search_index.js  wglmakie-proof.jl
dev/contributing/: index.html
dev/features/: index.html
dev/wglmakie-proof/: Project.toml  run.jl
docs/: INSTALL-AGENT.md  Project.toml  SCREENSHOTS.md  USING.md  make.jl  plan.md
docs/adr/: 0001-protocol.md  0002-kernel-launch.md  0003-rendering-surface.md  0003-terminal-images-superseded.md  0004-llm-cache.md  0005-ast-hash.md  0006-plugin-discovery.md  0007-tool-registration.md  0008-project-root.md  0009-repl-frames.md  0010-transport-and-persistence.md  0011-rendering-split.md  0012-frontend-stack.md  0013-backend-sessions.md  0014-workspaces.md  0015-hosts-targeting.md  0016-frontend-local-terminal.md  0017-frontend-self-relaunch.md  0018-video-playback.md  0019-frontend-control-channel.md  0020-server-monitoring.md  0021-pdf-preview.md  0022-capture-roi-to-llm.md  0023-daemon-fe-commands-and-spawn.md  0024-backend-web-pages.md  0025-daemon-authoritative-fe.md  0026-rename-to-ship-of-tools.md  0027-connection-reaper.md  0028-remote-comm-autoconnect.md  0029-multi-fe-docs-serving.md  0030-versioning-release-and-auto-update.md  0031-codex-sessions.md  0032-interactive-browser-figures.md  0032-session-repl-execute.md  0033-session-repl-execute.md  0034-dynamic-scalebar.md  0035-daemon-tcp-proxy.md
docs/src/: contributing.md  features.md  index.md
examples/preview/: math_sample.md  math_with_figure.md  pluto_demo.jl  pluto_demo2.jl  quarto_julia.qmd  sample.h5  sample.html  sample.png.scale.json  sample.tex
julia/kernel/: Project.toml
julia/pluto/: Manifest.toml  Project.toml  start.jl
julia/repl/: Project.toml
rust/: Cargo.toml  TODO.md
rust/backend/: Cargo.toml
rust/backend/sidecars/mathjax/: package-lock.json  package.json  render.mjs
rust/backend/src/: clients.rs  concept.rs  file_io.rs  files_mode.rs  handlers.rs  http_serve.rs  kernel.rs  main.rs  mathjax.rs  monitor.rs  paths.rs  pluto.rs  proxy.rs  pty.rs  repl.rs  server.rs  session.rs  session_state.rs  site_serve.rs  tmux.rs  update.rs  watcher.rs  workspaces.rs
rust/frontend/: Cargo.toml  build.rs
rust/frontend/src/: chrome.rs  cli.rs  download.rs  edit_buffer.rs  gpu.rs  hosts.rs  keybindings.rs  layout.rs  main.rs  monitor_view.rs  proxy_listen.rs  settings.rs  state.rs  state_persistence.rs  text.rs  transport.rs
rust/frontend/src/preview/: highlight.rs  markdown.rs  mod.rs  png.rs  quad.rs  svg.rs
rust/frontend/src/term/: mod.rs
rust/protocol/: Cargo.toml  build.rs
rust/protocol/src/: codec.rs  ir.rs  lib.rs  ops.rs
scripts/: comm-relay.ps1  docs-shots.sh  install-shortcut.ps1  install.sh  launch-sot.ps1  launch-sot.sh  launch-splash.ps1  relaunch-sot.ps1  release.sh  restart-backend.sh  set-shortcut-aumid.ps1  shutdown-sot.ps1
src/: ShipTools.jl  comm.jl
test/: runtests.jl
v0.3.0/: .documenter-siteinfo.json  index.html
v0.3.0/contributing/: index.html
v0.3.0/features/: index.html
v0.3.1/: .documenter-siteinfo.json  index.html
v0.3.1/contributing/: index.html
v0.3.1/features/: index.html
v0.3.2/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.3.2/contributing/: index.html
v0.3.2/features/: index.html
v0.3.3/: .documenter-siteinfo.json  index.html
v0.3.3/contributing/: index.html
v0.3.3/features/: index.html
v0.3.4/: .documenter-siteinfo.json  index.html
v0.3.4/contributing/: index.html
v0.3.4/features/: index.html
v0.3.5/: .documenter-siteinfo.json  index.html  objects.inv
v0.3.5/contributing/: index.html
v0.3.5/features/: index.html
v0.3.6/: .documenter-siteinfo.json  index.html
v0.3.6/contributing/: index.html
v0.3.6/features/: index.html
v0.3.7/: index.html  search_index.js
v0.3.7/contributing/: index.html
v0.3.7/features/: index.html
v0.3.8/: .documenter-siteinfo.json  index.html
v0.3.8/contributing/: index.html
v0.3.8/features/: index.html
v0.3.9/: .documenter-siteinfo.json  index.html  objects.inv
v0.3.9/contributing/: index.html
v0.3.9/features/: index.html
v0.4.0/: .documenter-siteinfo.json  index.html
v0.4.0/contributing/: index.html
v0.4.0/features/: index.html
v0.4.1/: .documenter-siteinfo.json  index.html  search_index.js
v0.4.1/contributing/: index.html
v0.4.1/features/: index.html
v0.4.2/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.2/contributing/: index.html
v0.4.2/features/: index.html
v0.4.3/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.3/contributing/: index.html
v0.4.3/features/: index.html
v0.4.4/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.4/contributing/: index.html
v0.4.4/features/: index.html
v0.4.5/: .documenter-siteinfo.json  index.html  objects.inv
v0.4.5/assets/: custom.css
v0.4.5/contributing/: index.html
v0.4.5/features/: index.html
v0.5.0/: .documenter-siteinfo.json  index.html  objects.inv
v0.5.0/contributing/: index.html
v0.5.0/features/: index.html
(+732 files in other folders)
