[workspace]
resolver = "2"
members = [
    "protocol",
    "backend",
    "frontend",
]

[workspace.package]
version = "0.3.2"
edition = "2021"
authors = ["kalidke"]
license = "MIT"

[workspace.dependencies]
# Async + plumbing
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "process", "sync", "net", "time", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"
interprocess = { version = "2", features = ["tokio"] }
anyhow = "1"

# Frontend rendering stack (per ADR 0012). NOT terminal-based; we own the renderer.
ratatui = { version = "0.29", default-features = false }
winit = "0.30"
wgpu = "23"
cosmic-text = "0.12"
glyphon = "0.7"
image = "0.25"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"
comrak = { version = "0.31", default-features = false }
pollster = "0.4"
bytemuck = { version = "1.21", features = ["derive"] }
bytemuck_derive = "1.9"
